--- a/htdocs/family.html
+++ b/htdocs/family.html
@@ -15,12 +15,35 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
     </head>
     <body>
-        <div style="width: 100%; height: auto;">
-            <iframe src="header.html" width="100%" height="100" style="border: none;"></iframe>
-        </div>
-        <div style="width: 100%; height: auto;">
-            <iframe src="footer.html" width="100%" height="300px" style="border: none;"></iframe>
-        </div>
+        <div id="page_header"></div>
+
+        <script>
+            fetch('header.html')
+                .then(response => response.text())
+                .then(data => document.getElementById('page_header').innerHTML = data)
+                .catch(error => console.error('Error loading file:', error));
+        </script>
+
+        <section class="bg-light pt-5 text-secondary">
+            <div class="container">
+                <div class="align-items-center row">
+                    <div class="col-lg-12 mb-12">
+                        <h1 class="display-4 fw-bold mb-3 text-dark text-center">Coming Soon</h1>
+                    </div>
+                </div>
+            </div>
+        <p></p>
+        </section>
+
+        <div id="page_footer"></div>
+
+        <script>
+            fetch('footer.html')
+                .then(response => response.text())
+                .then(data => document.getElementById('page_footer').innerHTML = data)
+                .catch(error => console.error('Error loading file:', error));
+        </script>
+
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
