--- a/htdocs/header.html
+++ b/htdocs/header.html
@@ -42,7 +42,7 @@
                                         <a class="dropdown-item" href="hobbies.html">
                                             Hobbies and Activities
                                         </a>
-                                        <a class="dropdown-item" href="biography.html">
+                                        <a class="dropdown-item" href="bio.html">
                                             Bio
                                         </a>
                                     </div>
@@ -57,12 +57,6 @@
                                         </a>
                                         <a class="dropdown-item" href="employment.html">
                                             Employment
-                                        </a>
-                                        <a class="dropdown-item" href="hobbies.html">
-                                            Hobbies and Activities
-                                        </a>
-                                        <a class="dropdown-item" href="biography.html">
-                                            Bio
                                         </a>
                                     </div>
                                 </li>
