--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,23 +16,21 @@
     </head>
     <body>
         <div id="page_header"></div>
-
         <script>
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => document.getElementById('page_header').innerHTML = data)
                 .catch(error => console.error('Error loading file:', error));
         </script>
-
         <section class="bg-light pt-5 text-secondary">
             <div class="container">
                 <div class="align-items-center row">
                     <div class="col-lg-6 mb-5">
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick</h1>
-                        <p class="fw-light lead mb-4">A strong senior software engineer who has many years of experience with abilities and experience in full stack development of web applications. Also experienced in developing backend tools, databases, and stand-alone applications for multiple operating systems.</p>
-                        <a href="contact.html" class="btn btn-primary">Contact Paul</a>
+                        <p class="fw-light lead mb-4">Paul lives in Eastsound, Washington, on beautiful Orcas Island. He is a husband, father, and grandfather who brings warmth and insight into every role he plays. Professionally, Paul is a Senior Software Engineer with a rich career background. Originally from Southern California, he attended College of the Canyons, Biola University, and California State University, Northridge.</p>
+                        <p class="fw-light lead mb-4">In 1997, Paul joined Amazon.com when it was a budding startup. He played a key role in developing Amazon&rsquo;s foundational shipping systems, helping to shape the customer experience. Outside of work, Paul has a passion for travel, music, and photography, which continues to inspire his life and work.</p>
+                        <a href="contact.html" class="btn btn-primary" target="_blank">Contact Paul</a>
                     </div>
-
                     <div class="col-lg-6">
                         <div class=" bg-white mb-n5 p-3 shadow" style="position: relative;">
                             <img src="img/paul-transparent.jpg" class="img-fluid w-100" alt="Hero image" width="640" height="800">
@@ -41,16 +39,13 @@
                 </div>
             </div>
         </section>
-
         <div id="page_footer"></div>
-
         <script>
             fetch('footer.html')
                 .then(response => response.text())
                 .then(data => document.getElementById('page_footer').innerHTML = data)
                 .catch(error => console.error('Error loading file:', error));
         </script>
-
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
