--- a/htdocs/overview.html
+++ b/htdocs/overview.html
@@ -30,12 +30,164 @@
                     <div class="col-lg-6 mb-5">
                         <p class="h6 text-primary text-uppercase">Professional Senior Software Engineer</p>
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick</h1>
-                        <p class="fw-light lead mb-4">A strong senior software engineer who has many years of experience with abilities and experience in full stack development of web applications. Also experienced in developing backend tools, databases, and stand-alone applications for multiple operating systems.</p>
+                        <p class="fw-light lead mb-4">Paul is a strong senior software engineer who has many years of experience with abilities and experience in full stack development of web applications. Also experienced in developing backend tools, databases, and stand-alone applications for multiple operating systems.</p>
+                        <ul>
+                            <li style="margin-bottom: 1em">
+                                Joined Amazon.com when it was starting. Wrote all the shipping software that was used at the time, reduced shipping time
+from 30 seconds per package to 4 seconds (an 85% reduction), helped to open 11 different distribution centers, and led a
+team of 3 other engineers.
+                            </li>
+                            <li style="margin-bottom: 1em">
+                                Managed all Electronic Data Interchange (EDI) at CUSO Financial Services at the time, reporting billions of dollars in
+client positions and broker commissions daily.
+                            </li>
+                            <li style="margin-bottom: 1em">
+                                Wrote Airworthiness Certification Services Process & Artifact Compliance Tool (PACT) from the ground up in Ruby on
+Rails both front and back end including database design and implementation
+                            </li>
+                        </ul>
+
+                        <p class="h4" style="color: red;">Paul is looking for a new position</p>
+                        <p class="fw-light lead mb-4">
+                            Paul is currently looking for a new position. He is only looking for a full-time remote position (unless it is in Eastsound, WA).
+                            <br>
+                            <b>Currently, he is NOT looking for contract work.</b>
+                        </p>
+
+                        <a href="docs/Resume-PaulCarrick_09-2024.pdf" class="btn btn-primary" target="_blank">Paul's Resume</a>
                     </div>
                     <div class="col-lg-6">
                         <div class=" bg-white mb-n5 p-3 shadow" style="position: relative;">
                             <img src="img/paul-transparent.jpg" class="img-fluid w-100" alt="Hero image" width="640" height="800">
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-light pt-5 text-secondary">
+            <div class="container">
+                <div class="align-items-center row">
+                    <div class="col-lg-12 mb-12">
+                        <h3 class="display-4 fw-bold mb-3 text-center">Skills</h3>
+                    </div>
+                </div>
+
+                <div class="row pt-5">
+                    <div class="col-lg-4">
+                        <h5>Languages</h5>
+                        <ul>
+                            <li>Ruby on Rails</li>
+                            <li>Python</li>
+                            <li>Java</li>
+                            <li>C / C++ / C#</li>
+                            <li>HTML / CSS / SCSS</li>
+                            <li>JavaScript</li>
+                            <li>TypeScript</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <h5>Frameworks & Libraries</h5>
+                        <ul>
+                            <li>React</li>
+                            <li>Node.js</li>
+                            <li>Angular</li>
+                            <li>Bootstrap</li>
+                            <li>jQuery</li>
+                            <li>.NET</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <h5>Databases</h5>
+                        <ul>
+                            <li>Postgres</li>
+                            <li>MySQL</li>
+                            <li>Microsoft SQL Server</li>
+                            <li>Oracle</li>
+                            <li>MongoDB</li>
+                            <li>AWS Redshift</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row pt-5">
+                    <div class="col-lg-4">
+                        <h5>Operating Systems</h5>
+                        <ul>
+                            <li>OSX</li>
+                            <li>Windows</li>
+                            <li>Linux</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <h5>DevOps</h5>
+                        <ul>
+                            <li>AWS (EC2, S3, Route 53, Redshift)</li>
+                            <li>Dooker</li>
+                            <li>Kubernetes</li>
+                            <li>Nginx</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <h5>Tools</h5>
+                        <ul>
+                            <li>Git / GitHub / GitLab</li>
+                            <li>Visual Studio</li>
+                            <li>Ruby Mine / Pycharm</li>
+                            <li>Eclipse</li>
+                            <li>Jira</li>
+                            <li>Confluence</li>
+                            <li>ChatGPT</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row pt-5">
+                    <div class="col-lg-4">
+                        <h5>Web Servers</h5>
+                        <ul>
+                            <li>Apache</li>
+                            <li>Puma</li>
+                            <li>Tomcat</li>
+                            <li>IIS</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <h5>Misc</h5>
+                        <ul>
+                            <li>Sidekiq</li>
+                            <li>Redis</li>
+                            <li>AJAX</li>
+                            <li>JSON</li>
+                            <li>XML</li>
+                            <ki>Rspec</ki>
+                            <li>RESTful Services</li>
+                            <li>APIs</li>
+                            <li>MVC</li>
+                            <li>Agile Development</li>
+                            <li>CI / CD</li>
+                            <li>TDD</li>
+                            <li>SaaS</li>
+                            <li>Full Stack</li>
+                            <li>Front-End</li>
+                            <li>Back-End</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <h5>Soft Skills</h5>
+                        <ul>
+                            <li>Team Leadership</li>
+                            <li>Project Management</li>
+                            <li>Problem-Solving</li>
+                            <li>Strategic Planning</li>
+                            <li>Mentorship</li>
+                        </ul>
                     </div>
                 </div>
             </div>
