--- a/htdocs/overview.html
+++ b/htdocs/overview.html
@@ -16,55 +16,56 @@
     </head>
     <body>
         <div id="page_header"></div>
-
         <script>
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => document.getElementById('page_header').innerHTML = data)
                 .catch(error => console.error('Error loading file:', error));
         </script>
-
         <section class="bg-light pt-5 text-secondary">
             <div class="container">
-                <div class="align-items-center row">
+                <div class="align-items-start row">
                     <div class="col-lg-6 mb-5">
                         <p class="h6 text-primary text-uppercase">Professional Senior Software Engineer</p>
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick</h1>
-                        <p class="fw-light lead mb-4">Paul is a strong senior software engineer who has many years of experience with abilities and experience in full stack development of web applications. Also experienced in developing backend tools, databases, and stand-alone applications for multiple operating systems.</p>
-                        <ul>
-                            <li style="margin-bottom: 1em">
-                                Joined Amazon.com when it was starting. Wrote all the shipping software that was used at the time, reduced shipping time
-from 30 seconds per package to 4 seconds (an 85% reduction), helped to open 11 different distribution centers, and led a
-team of 3 other engineers.
-                            </li>
-                            <li style="margin-bottom: 1em">
-                                Managed all Electronic Data Interchange (EDI) at CUSO Financial Services at the time, reporting billions of dollars in
-client positions and broker commissions daily.
-                            </li>
-                            <li style="margin-bottom: 1em">
-                                Wrote Airworthiness Certification Services Process & Artifact Compliance Tool (PACT) from the ground up in Ruby on
-Rails both front and back end including database design and implementation
-                            </li>
-                        </ul>
-
-                        <p class="h4" style="color: red;">Paul is looking for a new position</p>
-                        <p class="fw-light lead mb-4">
-                            Paul is currently looking for a new position. He is only looking for a full-time remote position (unless it is in Eastsound, WA).
-                            <br>
-                            <b>Currently, he is NOT looking for contract work.</b>
+                        <p class="fw-light mb-4">Paul is a strong senior software engineer who has many years of experience with abilities and experience in full stack development of web applications. Also experienced in developing backend tools, databases, and stand-alone applications for multiple operating systems.</p>
+                        <p class="fw-light mb-4">
+                            Paul is highly adaptable, with expertise across multiple languages, platforms, and databases. He brings professional experience in various programming languages (including Ruby, C/C++, and Java), databases (such as MySQL, Postgres, and MongoDB), and operating systems (OSX, Windows, and Linux). His priority is delivering quality results, using the tools at hand.
                         </p>
-
-                        <a href="docs/Resume-PaulCarrick_09-2024.pdf" class="btn btn-primary" target="_blank">Paul's Resume</a>
+                            <ul>
+                                <li style="margin-bottom: 1em">
+                                    Joined Amazon.com when it was starting. Wrote all the shipping software that was used at the time, reduced shipping time
+                                    from 30 seconds per package to 4 seconds (an 85% reduction), helped to open 11 different distribution centers, and led a
+                                    team of 3 other engineers.
+                                </li>
+                                <li style="margin-bottom: 1em">
+                                    Wrote Airworthiness Certification Services Process & Artifact Compliance Tool (PACT) from the ground up in Ruby on
+                                    Rails both front and back end including database design and implementation
+                                </li>
+                                <li style="margin-bottom: 1em">
+                                    Managed all Electronic Data Interchange (EDI) at CUSO Financial Services at the time, reporting billions of dollars in
+                                    client positions and broker commissions daily.
+                                </li>
+                            </ul>
+                        <p class="h4" style="color: red;">Paul is looking for a new position</p>
+                        <p class="fw-light mb-4">
+                            Paul is currently looking for a new position. He is only looking for a full-time remote position (unless it is in Eastsound, WA). <br> <b>Currently, he is NOT looking for contract work.</b>
+                        </p>
+                        <a href="employment.html" class="btn btn-primary" style="min-width: 150px; margin-right: 20px; margin-bottom: 20px">
+                            Paul's Experience
+                        </a>
+                        <a href="docs/Resume-PaulCarrick_09-2024.pdf" class="btn btn-primary" style="min-width: 150px; margin-bottom: 20px" target="_blank">
+                            Paul's Resume
+                        </a>
                     </div>
                     <div class="col-lg-6">
-                        <div class=" bg-white mb-n5 p-3 shadow" style="position: relative;">
+                        <div class="bg-white mb-n5 p-3 shadow" style="position: relative;">
                             <img src="img/paul-transparent.jpg" class="img-fluid w-100" alt="Hero image" width="640" height="800">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
         <section class="bg-light pt-5 text-secondary">
             <div class="container">
                 <div class="align-items-center row">
@@ -72,7 +73,6 @@ Rails both front and back end including database design and implementation
                         <h3 class="display-4 fw-bold mb-3 text-center">Skills</h3>
                     </div>
                 </div>
-
                 <div class="row pt-5">
                     <div class="col-lg-4">
                         <h5>Languages</h5>
@@ -86,7 +86,6 @@ Rails both front and back end including database design and implementation
                             <li>TypeScript</li>
                         </ul>
                     </div>
-
                     <div class="col-lg-4">
                         <h5>Frameworks & Libraries</h5>
                         <ul>
@@ -98,7 +97,6 @@ Rails both front and back end including database design and implementation
                             <li>.NET</li>
                         </ul>
                     </div>
-
                     <div class="col-lg-4">
                         <h5>Databases</h5>
                         <ul>
@@ -111,7 +109,6 @@ Rails both front and back end including database design and implementation
                         </ul>
                     </div>
                 </div>
-
                 <div class="row pt-5">
                     <div class="col-lg-4">
                         <h5>Operating Systems</h5>
@@ -121,7 +118,6 @@ Rails both front and back end including database design and implementation
                             <li>Linux</li>
                         </ul>
                     </div>
-
                     <div class="col-lg-4">
                         <h5>DevOps</h5>
                         <ul>
@@ -131,7 +127,6 @@ Rails both front and back end including database design and implementation
                             <li>Nginx</li>
                         </ul>
                     </div>
-
                     <div class="col-lg-4">
                         <h5>Tools</h5>
                         <ul>
@@ -145,7 +140,6 @@ Rails both front and back end including database design and implementation
                         </ul>
                     </div>
                 </div>
-
                 <div class="row pt-5">
                     <div class="col-lg-4">
                         <h5>Web Servers</h5>
@@ -156,7 +150,6 @@ Rails both front and back end including database design and implementation
                             <li>IIS</li>
                         </ul>
                     </div>
-
                     <div class="col-lg-4">
                         <h5>Misc</h5>
                         <ul>
@@ -178,7 +171,6 @@ Rails both front and back end including database design and implementation
                             <li>Back-End</li>
                         </ul>
                     </div>
-
                     <div class="col-lg-4">
                         <h5>Soft Skills</h5>
                         <ul>
@@ -192,16 +184,13 @@ Rails both front and back end including database design and implementation
                 </div>
             </div>
         </section>
-
         <div id="page_footer"></div>
-
         <script>
             fetch('footer.html')
                 .then(response => response.text())
                 .then(data => document.getElementById('page_footer').innerHTML = data)
                 .catch(error => console.error('Error loading file:', error));
         </script>
-
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
