--- a/htdocs/html/home.html
+++ b/htdocs/html/home.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="paul-carrick.com">
         <meta name="author" content="Paul Carrick">
-        <title<paul-carrick.com</title>
+        <title>paul-carrick.com</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/blocks.css">
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
     </head>
     <body>
+        <div id="my-react-component"></div>
+        <script src="../assets/js/react/static/js/main.c902535a.js"></script>
+
         <div id="page_header"></div>
         <script>
             fetch('./header.html')
