Fixes from refactor

--- a/htdocs/html/home.html
+++ b/htdocs/html/home.html
@@ -32,7 +32,7 @@
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick</h1>
                         <p class="fw-light lead mb-4">Paul lives in Eastsound, Washington, on beautiful Orcas Island. He is a husband, father, and grandfather who brings warmth and insight into every role he plays. Professionally, Paul is a Senior Software Engineer with a rich career background. Originally from Southern California, he attended College of the Canyons, Biola University, and California State University, Northridge.</p>
                         <p class="fw-light lead mb-4">In 1997, Paul joined Amazon.com when it was a budding startup. He played a key role in developing Amazon&rsquo;s foundational shipping systems, helping to shape the customer experience. Outside of work, Paul has a passion for travel, cooking, music, and photography, which continues to inspire his life and work.</p>
-                        <a href="html/contact.html" class="btn btn-primary" target="_blank">Contact Paul</a>
+                        <a href="contact.html" class="btn btn-primary" target="_blank">Contact Paul</a>
                     </div>
                     <div class="col-lg-6">
                         <div class=" bg-white mb-n5 p-3 shadow" style="position: relative;">
